--- a/Invoice2/invoice2.html
+++ b/Invoice2/invoice2.html
@@ -43,8 +43,19 @@ their prices, and their totals */
     var tax_rate = 0.0575;
     var tax = tax_rate*subtotal;
 
+// Compute shipping
+if(subtotal <= 50) {
+  shipping = 2;
+}
+else if(subtotal <= 100) {
+  shipping = 5;
+}
+else {
+  shipping = 0.05*subtotal; // shipping is 5% of total if $100 or more
+}
+
 // Compute grand total
-    var total = subtotal + tax;
+    var total = subtotal + tax + shipping
 
 </script>
 
@@ -131,8 +142,12 @@ their prices, and their totals */
             <td width="54%">$<script>document.write(subtotal);</script></td>
           </tr>
           <tr>
-            <td style="text-align: center;" colspan="3" width="67%"><span style="font-family: arial;">Tax @ 5.75</span></td>
+            <td style="text-align: center;" colspan="3" width="67%"><span style="font-family: arial;">Tax Rate @ <script>document.write(tax_rate*100)</script>%</span></td>
             <td width="54%">$<script>document.write(tax.toFixed(2))</script></td>
+          </tr>
+          <tr>
+            <td style="text-align: center;" colspan="3" width="67%"><span style="font-family: arial;">Shipping</span></td>
+            <td width="54%">$<script>document.write(shipping.toFixed(2))</script></td>
           </tr>
           <tr>
             <td style="text-align: center;" colspan="3" width="67%"><strong>Total</strong></td>
@@ -140,7 +155,13 @@ their prices, and their totals */
           </tr>
         </tbody>
       </table>
-
+<div>
+  <br>
+  <b>OUR SHIPPING POLICY IS:A subtotal $0 - $49.99 will be $2 shipping
+  A subtotal $50 - $99.99 will be $5 shipping
+  Subtotals over $100 will be charged 5% of the subtotal amount 
+  </b>
+</div>
 
 </body>
 </html>
