--- a/Lab 10/Invoice1/invoice.html
+++ b/Lab 10/Invoice1/invoice.html
@@ -1,46 +1,86 @@
+<style>
+  td {
+    border: 1px black
+  }
+  tr {
+    border: 1px black
+  }
+</style>
+
+
+<table style="border: 1px solid black;text-align: center;"
+  onclick = "
+    new_row = this.appendChild(document.createElement('tr'));
+    for(i=1; i<= this.rows[0].cells.length; i++) {
+      new_cell = new_row.appendChild(document.createElement('td'));
+      new_cell.innerHTML = 'xxx';
+    }
+    "
+>
+  <tbody id="prodTableBody">
+    <tr style="border: 1px solid black;">
+      <th style="border: 1px solid black;">Product Name</th><th>Price</th></tr>
+
 <script>
+  
 /* This shows the invoice for different shaving creams, 
 their prices, and their totals */
 
 // Product Data
+
+var product_quantities = [0,2,3,4,5];
+// array of all products
+// corresponds to product_quantities array
+// product_quantities[i] is the quantity for products[i]
+  products = [
+  { 'name': 'small gumball', 'price': 0.02 },
+  { 'name': 'medium gumball', 'price': 0.05 },
+  { 'name': 'large gumball', 'price': 0.07 },
+  { 'name': 'small jawbreaker', 'price': 0.06 },
+  { 'name': 'large jawbreaker', 'price': 0.10 }
+  ];
+  for(let i in products) {
+      document.write(`
+    <tr style="border: 1px solid black;"><td style="border: 1px solid black;">${products[i].name}</td><td>${products[i].price}</td></tr>
+    `)
+  }
+
 // Product 1
-    var item1 = 'Gillette Sensor 3 Razor';
-    var quantity1 = 2;
-    var price1 = 1.23;
 
     var product1 = {};
-    product1.item = 'Gillette Sensor 3 Razor';
-    product1.quantity = 2;
-    product1.price = 1.23;
+    product1.item = 'iPhone 7';
+    product1.quantity = product_quantities[0];
+    product1.price = 47.95;
 
     // var product1 = {"item": 'Gillette Sensor 3 Razor', "quantity": 2, "price":1.23}
 
 // Product 2
     var item2 = 'Barbasol Shaving Cream';
-    var quantity2 = 1;
     var price2 = 2.64;
 
 // Product 3
     var item3 = 'Nautica Cologne';
-    var quantity3 = 1;
     var price3 = 6.17;
 
 // Product 4
     var item4 = 'Rubbing Alcohol';
-    var quantity4 = 3;
     var price4 = 0.98;
 
 // Product 5
     var item5 = 'Colgate Classic Toothbrush';
-    var quantity5 = 12;
     var price5 = 1.89;
 
+// change product1 quantity to 0
+product1.quantity = 0;
+// add SKU$
+product1["SKU#"] = 1234;
+
 // Compute extended prices
-    var extended_price1 = price1.quantity*product1.price
-    var extended_price2 = quantity2*price2
-    var extended_price3 = quantity3*price3
-    var extended_price4 = quantity4*price4
-    var extended_price5 = quantity5*price5
+    var extended_price1 = product1_quantities[0]*product1.price;
+    var extended_price2 = product1_quantities[2]*price2;
+    var extended_price3 = product1_quantities[3]*price3;
+    var extended_price4 = product1_quantities[4]*price4;
+    var extended_price5 = product1_quantities[5]*price5;
 
 // Compute subtotal 
     var subtotal = extended_price1 + extended_price2 + extended_price3 + extended_price4 + extended_price5
@@ -65,8 +105,7 @@ their prices, and their totals */
 </head>
 <body>
 
-
-    <table border="2">
+    <!-- <table border="2">
         <tbody>
           <tr>
             <th style="text-align: center;" width="43%">Item</th>
@@ -79,7 +118,7 @@ their prices, and their totals */
             document.write(`
           <tr>
             <td width="43%">${product1.item}</td>
-            <td align="center" width="11%">${price1.quantity}</td>
+            <td align="center" width="11%">${product1.quantity}</td>
             <td width="13%">$${product1.price}</td>
             <td width="54%">$${extended_price1}</td>
           </tr>
@@ -145,8 +184,15 @@ their prices, and their totals */
             <td width="54%"><strong>$<script>document.write(total.toFixed(2))</script></strong></td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
 
+      <input type="button" value="Delete Last Row"
+      onclick = "
+        prodTableBody.deleteRow(prodTableBody.rows.length - 1)
+      "
+      
+      >
 
 </body>
+
 </html>
