--- a/Invoice3/invoice3.html
+++ b/Invoice3/invoice3.html
@@ -39,24 +39,6 @@ their prices, and their totals */
 // Compute subtotal 
     var subtotal = extended_price1 + extended_price2 + extended_price3 + extended_price4 + extended_price5
 
-// Compute tax
-    var tax_rate = 0.0575;
-    var tax = tax_rate*subtotal;
-
-// Compute shipping
-if(subtotal <= 50) {
-  shipping = 2;
-}
-else if(subtotal <= 100) {
-  shipping = 5;
-}
-else {
-  shipping = 0.05*subtotal; // shipping is 5% of total if $100 or more
-}
-
-// Compute grand total
-    var total = subtotal + tax + shipping
-
 </script>
 
 
@@ -78,59 +60,42 @@ else {
             <th style="text-align: center;" width="54%">extended price</th>
           </tr>
         <script>
-            // Product 1
-            document.write(`
+
+// Compute tax
+var tax_rate = 0.0575;
+    var tax = tax_rate*subtotal;
+
+// Compute shipping
+if(subtotal <= 50) {
+  shipping = 2;
+}
+else if(subtotal <= 100) {
+  shipping = 5;
+}
+else {
+  shipping = 0.05*subtotal; // shipping is 5% of total if $100 or more
+}
+
+            // Product 
+            subtotal = 0 
+            for(i=1; eval("typeof item"+i) != 'undefined'; i++) {
+              extended_price = eval("price" + i) * eval("quantity" + i);
+              subtotal += extended_price
+              document.write(`
           <tr>
-            <td width="43%">${item1}</td>
-            <td align="center" width="11%">${quantity1}</td>
-            <td width="13%">$${price1}</td>
-            <td width="54%">$${extended_price1}</td>
+            <td width="43%">${eval("item" + i)}</td>
+            <td align="center" width="11%">${eval("quantity" + i)}</td>
+            <td width="13%">${eval("price" + i)}</td>
+            <td width="54%">${extended_price}</td>
           </tr>
           `);
-        </script>
-          <script>
-            // Product 2
-            document.write(`
-          <tr>
-            <td width="43%">${item2}</td>
-            <td align="center" width="11%">${quantity2}</td>
-            <td width="13%">$${price2}</td>
-            <td width="54%">$${extended_price2}</td>
-          </tr>
-          `);
-        </script>
-          <script>
-              // Product 3
-            document.write(`
-          <tr>
-            <td width="43%">${item3}</td>
-            <td align="center" width="11%">${quantity3}</td>
-            <td width="13%">$${price3}</td>
-            <td width="54%">$${extended_price3}</td>
-          </tr>
-          `);
-        </script>
-          <script>
-              // Product 4
-            document.write(`
-          <tr>
-            <td width="43%">${item4}</td>
-            <td align="center" width="11%">${quantity4}</td>
-            <td width="13%">$${price4}</td>
-            <td width="54%">$${extended_price4}</td>
-          </tr>
-          `);
-        </script>>
-          <script>
-              // Product 5
-            document.write(`
-          <tr>
-            <td width="43%">${item5}</td>
-            <td align="center" width="11%">${quantity5}</td>
-            <td width="13%">$${price5}</td>
-            <td width="54%">$${extended_price5}</td>
-          </tr>
-          `);
+            }
+        
+
+
+// Compute grand total
+    var total = subtotal + tax + shipping
+
         </script>
           <tr>
             <td colspan="4" width="100%">&nbsp;</td>
