--- a/Invoice3/invoice3.html
+++ b/Invoice3/invoice3.html
@@ -29,16 +29,6 @@ their prices, and their totals */
     var quantity5 = 12;
     var price5 = 1.89;
 
-// Compute extended prices
-    var extended_price1 = quantity1*price1
-    var extended_price2 = quantity2*price2
-    var extended_price3 = quantity3*price3
-    var extended_price4 = quantity4*price4
-    var extended_price5 = quantity5*price5
-
-// Compute subtotal 
-    var subtotal = extended_price1 + extended_price2 + extended_price3 + extended_price4 + extended_price5
-
 </script>
 
 
@@ -61,23 +51,9 @@ their prices, and their totals */
           </tr>
         <script>
 
-// Compute tax
-var tax_rate = 0.0575;
-    var tax = tax_rate*subtotal;
-
-// Compute shipping
-if(subtotal <= 50) {
-  shipping = 2;
-}
-else if(subtotal <= 100) {
-  shipping = 5;
-}
-else {
-  shipping = 0.05*subtotal; // shipping is 5% of total if $100 or more
-}
 
             // Product 
-            subtotal = 0 
+            subtotal = 0;
             for(i=1; eval("typeof item"+i) != 'undefined'; i++) {
               extended_price = eval("price" + i) * eval("quantity" + i);
               subtotal += extended_price
@@ -92,6 +68,20 @@ else {
             }
         
 
+// Compute tax
+var tax_rate = 0.0575;
+    var tax = tax_rate*subtotal;
+
+// Compute shipping
+if(subtotal <= 50) {
+  shipping = 2;
+}
+else if(subtotal <= 100) {
+  shipping = 5;
+}
+else {
+  shipping = 0.05*subtotal; // shipping is 5% of total if $100 or more
+}
 
 // Compute grand total
     var total = subtotal + tax + shipping
