--- a/Calulot_Matthew_Assignment1/public/products_display.html
+++ b/Calulot_Matthew_Assignment1/public/products_display.html
@@ -14,33 +14,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Retrieve product data from products_data.js -->
     <script src="./product_data.js" type="text/javascript"></script> 
-    <!-- Retrieved style template from w-3 schools // Modified font to be Merriweather instead of Karma // -->
+    <!-- Retrieved style template from w-3 schools (TEMPLATE WAS "Food Blog Template") // Modified font to be Merriweather instead of Karma // -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
     <title>Matt's Pen Emporium</title>
 </head>
 <body>
 
-<!-- Format style for product display page -->
+<!-- Format style for product display page // Change font from Karma to Merriweather -->
     <style>
         body,h1,h2,h3,h4,h5,h6 {font-family: "Merriweather"}
         .w3-bar-block .w3-bar-item {padding:20px}
     </style>
       
-<!-- Creating the header -->
+<!-- Creating and styling the header -->
 <div class="w3-top">
     <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
       <div class="w3-center w3-padding-16" style="background-color:#A52A2A; border: 2px solid goldenrod; color:whitesmoke"><b>Pens for Every Budget!</b></div>
     </div>
   </div>
 
-<!-- Set background to productbackground.jpg  -->
+<!-- Set background to productbackground.jpg (dark paper texture)  -->
 <body style="background-image: url(images/productbackground.jpg);  background-repeat: no-repeat; background-size:cover;">
 
-<!-- // Do a post request to quantity_form, any data in this form (keys and values) will be put into post values --> 
+<!-- // Do a post request to /purchase, any data in this form (keys and values) will be put into post values --> 
 <form name="quantity_form" action="/purchase" method="POST">  
 
-<!-- Write page content (products and prices) // Loop to write values is taken from SmartPhoneProducts3-->
+<!-- Write page content (products and prices) // Loop to write values is heavily adapted  from SmartPhoneProducts3, products_display to fit Assignment1-->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px"></div>
 <script>
     for (i = 0; i < products_array.length; i++)
